build packages based on several os versions
